[package]
name = "soundgist"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15"
anyhow = "1.0"
async-openai = "0.26"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
mockall = "0.11"
